[gd_scene load_steps=5 format=3 uid="uid://nxwkhiytt6wv"]

[ext_resource type="Script" uid="uid://bk56m7j3csqta" path="res://scripts/enemy.gd" id="1_7p1mj"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ne65n"]
height = 3.0

[sub_resource type="SphereShape3D" id="SphereShape3D_md0e3"]

[sub_resource type="BoxShape3D" id="BoxShape3D_md0e3"]
size = Vector3(2, 1.5, 6)

[node name="Enemy" type="CharacterBody3D"]
script = ExtResource("1_7p1mj")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_ne65n")

[node name="FootstepSpawner" type="Node3D" parent="."]

[node name="FootstepTimer" type="Timer" parent="."]

[node name="EnemyHearing" type="Area3D" parent="."]
disable_mode = 1
collision_layer = 256
collision_mask = 256

[node name="CollisionShape3D" type="CollisionShape3D" parent="EnemyHearing"]
transform = Transform3D(13, 0, 0, 0, 13, 0, 0, 0, 13, 0, 0, 0)
shape = SubResource("SphereShape3D_md0e3")

[node name="EnemySight" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5.63384)
collision_layer = 256
collision_mask = 256

[node name="CollisionShape3D" type="CollisionShape3D" parent="EnemySight"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.921309, 2.66585)
shape = SubResource("BoxShape3D_md0e3")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[connection signal="body_entered" from="EnemyHearing" to="." method="_on_EnemyHearing_entered"]
[connection signal="body_exited" from="EnemyHearing" to="." method="_on_HearingArea_body_exited"]
